infra/modules/alb/main.tf
resource "aws_alb" "gatus_alb" {
  subnets         = var.subnet_ids
  security_groups = [aws_security_group.alb_sg.id]

  tags = {
  Name = "gatus-alb"
  }
}

resource "aws_alb_target_group" "gatus_target" {
  name        = "gatus-target"
  port        = var.app_port
  protocol    = "HTTP"
  vpc_id      = var.vpc_id
  target_type = "ip"

  health_check {
    path                = "/"
    protocol            = "HTTP"
    matcher             = "200"
    healthy_threshold   = 2
    unhealthy_threshold = 2
    interval            = "30"
    timeout             = 5
  }

  tags = {
  Name = "gatus-target-group"
  }
}

#HTTP listener redirects all traffic to HTTPS
resource "aws_alb_listener" "gatus_listener" {
  load_balancer_arn = aws_alb.gatus_alb.arn
  port              = 80
  protocol          = "HTTP"

  default_action {
    type = "redirect"

    redirect {
        port = "443"
        protocol = "HTTPS"
        status_code = "HTTP_301"
    }
  }
}

resource "aws_alb_listener" "https_listener" {
  load_balancer_arn = aws_alb.gatus_alb.arn
  port              = 443
  protocol          = "HTTPS"

  certificate_arn = var.certificate_arn

  default_action {
    target_group_arn = aws_alb_target_group.gatus_target.arn
    type             = "forward"
  }
}

# ALB security group allows all traffic from the internet
resource "aws_security_group" "alb_sg" {
  name        = "alb_sg"
  description = "security group for the load balancer"
  vpc_id      = var.vpc_id

  tags = {
  Name = "alb-security-group"
  }
}

resource "aws_vpc_security_group_ingress_rule" "alb_http_ingress" {
  security_group_id = aws_security_group.alb_sg.id

  cidr_ipv4   = "0.0.0.0/0"
  from_port   = 80
  to_port     = 80
  ip_protocol = "tcp"
}

resource "aws_vpc_security_group_ingress_rule" "alb_https_ingress" {
  security_group_id = aws_security_group.alb_sg.id

  cidr_ipv4   = "0.0.0.0/0"
  from_port   = 443
  to_port     = 443
  ip_protocol = "tcp"
}

resource "aws_vpc_security_group_egress_rule" "alb_egress" {
  security_group_id = aws_security_group.alb_sg.id

  cidr_ipv4   = "0.0.0.0/0"
  ip_protocol = "-1"
}
